--- a/src/component/home/Hospital Booking/hospital-booking.component.css
+++ b/src/component/home/Hospital Booking/hospital-booking.component.css
@@ -10,9 +10,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-left: -10%;
 }
 .hospital_carousel_main {
   width: 100%;
+  margin-top: 0%;
+  margin-left: 30%;
 }
 .hospital_carousel {
   width: 100%;
@@ -59,8 +62,8 @@
   align-items: center;
 }
 .hospital_bookcont_from_user {
-  width: 80%;
-  margin-left: 245px;
+  width: 71%;
+  margin-left: 511px;
   margin-top: 10%;
 }
 
